--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
-    "babel-core": "^6.26.3",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
-    "babel-preset-env": "^1.7.0",
     "css-loader": "^2.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -31,6 +30,7 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.3.4",
     "uuid": "^3.3.2"
   }
 }
